2009-12-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New `perf' demo for performance metrics.

	* demo/perf.c: New.

	* demo/Makefile.am: Update accordingly.

2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enable reduction code in LL suite.

	* benchmarks/livermore/kernel3.c,
	* benchmarks/livermore/kernel4.c: Enable REDUCTIONS code.

2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Embed more information in benchmark results.
	
	* build-aux/genbench.sh: Use `-t' with `slr' when running
	benchmarks.

2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes to LL suite.
	
	* build-aux/genbench.sh: Fix typo. 

	* benchmarks/livermore/ll-bounds.ods,
	* benchmarks/livermore/ll-bounds.csv: Fix bounds for LK6.
	
	* benchmarks/livermore/kernel6.c, 
	* benchmarks/livermore/kernel21.c: Simplify array declarations.

2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Various fixes to the LL suite.
	
	* benchmarks/livermore/kernel2.c: Use alternate implementation.	

	* benchmarks/livermore/kernel8.c: Fix array offseting. Use fixed
	array bounds. Check array dimensions on entry.
	
	* benchmarks/livermore/kernel15.c: Use fixed array bounds.  Check
	array dimensions on entry.
	
	* benchmarks/livermore/kernel23.c: Fix off-by-one on array
	bounds. Check array dimensions on entry.

	* benchmarks/livermore/ll-bounds.ods,
	* benchmarks/livermore/ll-bounds.csv: Fix array bounds.

	* benchmarks/livermore/ll-generate.py: Populate "description" and
	"author" fields in the right order.
	
2009-12-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fix in benchmarking output.

	* benchmarks/lib/benchmark.c: Insert line break before SEP dump.

2009-12-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Convert more benchmark input for use with `make check'.

	* benchmarks/fft/fft.d8,
	* benchmarks/mandel/mandel.d1,
	* benchmarks/livermore/ll-generate.py: Annotate some inputs for
	`make check'.

2009-12-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Generate BLAS data automatically.
